refactor: 테스트 추가, IssueService 권한 검사 Validator로 이동